@@ -46,9 +46,9 @@ class TimeRange(BaseElement):
         super(TimeRange, self).__init__()
         if start is not None:
             self.attributes['start'] = \
-                    start.strftime("%Y%02m%02dT%02H%02M%02SZ")
+                    start.strftime("%Y%m%dT%H%M%SZ")
         if end is not None:
-            self.attributes['end'] = end.strftime("%Y%02m%02dT%02H%02M%02SZ")
+            self.attributes['end'] = end.strftime("%Y%m%dT%H%M%SZ")
 
 
 class NotDefined(BaseElement):
@@ -65,9 +65,9 @@ class Expand(BaseElement):
 
     def __init__(self, start, end=None):
         super(Expand, self).__init__()
-        self.attributes['start'] = start.strftime("%Y%02m%02dT%02H%02M%02SZ")
+        self.attributes['start'] = start.strftime("%Y%m%dT%H%M%SZ")
         if end is not None:
-            self.attributes['end'] = end.strftime("%Y%02m%02dT%02H%02M%02SZ")
+            self.attributes['end'] = end.strftime("%Y%m%dT%H%M%SZ")
 
 
 class Comp(NamedBaseElement):
